--- a/AMSS/src/AMSS/Views/Agregar_MedicamentoGUI.form
+++ b/AMSS/src/AMSS/Views/Agregar_MedicamentoGUI.form
@@ -272,8 +272,8 @@
                               <Component id="textField1" min="-2" pref="189" max="-2" attributes="0"/>
                               <Component id="jSpinner7" alignment="0" min="-2" pref="187" max="-2" attributes="0"/>
                               <Group type="102" attributes="0">
-                                  <Component id="jSpinner10" min="-2" pref="46" max="-2" attributes="0"/>
-                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                  <Component id="jSpinner10" min="-2" pref="63" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
                                   <Component id="jLabel21" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
